--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "vscode-launcher",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Launches vscode launch.json configurations from the command line",
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "vscode-launcher": "dist/index.js"
   },
   "type": "module",
   "author": "Dewey McNeill",
