--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "vscode-launcher",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "Launches vscode launch.json configurations from the command line",
   "main": "build/main-bundle.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node build/index.js",
+    "start": "node build/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "vscode-launcher": "build/main-bundle.js"
+    "vscode-launcher": "./bin/run.js"
   },
   "type": "module",
   "author": "Dewey McNeill",
@@ -21,6 +21,7 @@
   "license": "ISC",
   "git_repository": "https://github.com/dthorne/vscode-launcher",
   "dependencies": {
+    "@oclif/core": "^4.0.22",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "figlet": "^1.7.0",
@@ -30,8 +31,18 @@
     "@types/figlet": "^1.5.8",
     "@types/node": "^22.5.4",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
+  },
+  "oclif": {
+    "commands": {
+      "strategy": "single",
+      "target": "./dist/index.js"
+    },
+    "bin": "vscode-launcher",
+    "dirname": "vscode-launcher",
+    "topicSeparator": " "
   }
 }
